wzdftpd (0.5.3-2) unstable; urgency=low

  * Changed build-deps to fix FTBFS on some archs
  * Added postgresql backend to debian packages

 -- Pierre Chifflier <chifflier@cpe.fr>  Sun, 22 May 2005 18:48:41 +0200

wzdftpd (0.5.3-1) unstable; urgency=low

  * New upstream version

 -- Pierre Chifflier <chifflier@cpe.fr>  Wed, 18 May 2005 17:17:56 +0200

wzdftpd (0.5.2-1) unstable; urgency=low

  * New upstream version

 -- Pierre Chifflier <chifflier@cpe.fr>  Mon, 18 Apr 2005 17:37:49 +0200

wzdftpd (0.5.1-1) unstable; urgency=low

  * New upstream version (Closes: #294534)

 -- Pierre Chifflier <chifflier@cpe.fr>  Tue,  8 Mar 2005 15:12:55 +0100

wzdftpd (0.5.0-1) unstable; urgency=low

  * New upstream version

 -- Pierre Chifflier <chifflier@cpe.fr>  Tue, 15 Feb 2005 13:17:44 +0100

wzdftpd (0.4.4-2) unstable; urgency=high

  * Applied patch to fix crash in site purge

 -- Pierre Chifflier <chifflier@cpe.fr>  Wed,  8 Dec 2004 10:47:43 +0100

wzdftpd (0.4.4-1) unstable; urgency=low

  * New upstream version.

 -- Pierre Chifflier <chifflier@cpe.fr>  Tue,  7 Dec 2004 10:40:32 +0100

wzdftpd (0.4.3-1) unstable; urgency=medium

  * New upstream version.
  * urgency=medium because this version fixes some security problems

 -- Pierre Chifflier <chifflier@cpe.fr>  Thu, 28 Oct 2004 09:58:27 +0200

wzdftpd (0.4.2-1) unstable; urgency=low

  * New upstream version.

 -- Pierre Chifflier <chifflier@cpe.fr>  Tue,  5 Oct 2004 10:40:56 +0200

wzdftpd (0.4.1-1) unstable; urgency=low

  * New upstream version. (Closes: #268878)

 -- Pierre Chifflier <chifflier@cpe.fr>  Wed, 15 Sep 2004 22:00:37 +0200

wzdftpd (0.4.0-1) unstable; urgency=low

  * New upstream version.
  * Added Perl module.

 -- Pierre Chifflier <chifflier@cpe.fr>  Fri, 27 Aug 2004 09:56:39 +0200

wzdftpd (0.3.3-1) unstable; urgency=low

  * Initial Debian Upload (closes: Bug#238143)

 -- Pierre Chifflier <chifflier@cpe.fr>  Fri, 25 Jun 2004 11:43:06 +0200
