@@ -3,7 +3,7 @@
 
 
 AC_PREREQ(2.53)
-AC_INIT(wzdftpd, 0.5.3, pollux@cpe.fr)
+AC_INIT(wzdftpd, 0.5.3, pollux@wzdftpd.net)
 
 # having both commands will give warnings, but is necessary for BSD
 AC_CANONICAL_TARGET
